tests/ui/imports/issue-4366-2.stderr
error[E0425]: cannot find type `Bar` in this scope
  --> $DIR/issue-4366-2.rs:16:21
   |
LL |         fn sub() -> Bar { 1 }
   |                     ^^^ not found in this scope
   |
note: type alias `a::b::Bar` exists but is inaccessible
  --> $DIR/issue-4366-2.rs:12:9
   |
LL |         type Bar = isize;
   |         ^^^^^^^^^^^^^^^^^ not accessible

error[E0423]: expected function, found module `foo`
  --> $DIR/issue-4366-2.rs:26:5
   |
LL |     foo();
   |     ^^^ not a function
   |
note: function `m1::foo` exists but is inaccessible
  --> $DIR/issue-4366-2.rs:22:5
   |
LL |     fn foo() {}
   |     ^^^^^^^^ not accessible
help: consider importing this function instead
   |
LL + use foo::foo;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0423, E0425.
For more information about an error, try `rustc --explain E0423`.
